task1/test_results_defects/infer_test/free_nondynamic_allocated_memory/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/free_nondynamic_allocated_memory.c:115: error: Use After Free
  Pulse found a potential null pointer dereference  on line 115.
  113. 	char* ptr="a";
  114. 	while(1)
  115. 	free(ptr); /*Tool should detect this line as error*/ /*ERROR:Free memory not allocated dynamically*/
        ^
  116. }
  117. 

#1
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/free_nondynamic_allocated_memory.c:128: error: Use After Free
  Pulse found a potential null pointer dereference  on line 128.
  126. 	int a=2,b=0;
  127. 	while(a>b)
  128. 	free(ptr); /*Tool should detect this line as error*/ /*ERROR:Free memory not allocated dynamically*/
        ^
  129. }
  130. 

#2
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/free_nondynamic_allocated_memory.c:141: error: Use After Free
  Pulse found a potential null pointer dereference  on line 141.
  139. 	int a=0,b=2;
  140. 	while(a<b)
  141. 	free(ptr); /*Tool should detect this line as error*/ /*ERROR:Free memory not allocated dynamically*/
        ^
  142. }
  143. 

Found 3 issues
      Issue Type(ISSUED_TYPE_ID): #
  Use After Free(USE_AFTER_FREE): 3
